WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182167
WebDriver: timeouts value and cookie expiry should be limited to max safe integer
https://bugs.webkit.org/show_bug.cgi?id=182167
Summary
WebDriver: timeouts value and cookie expiry should be limited to max safe int...
Carlos Garcia Campos
Reported
2018-01-26 01:37:29 PST
This changed recently in the spec:
https://github.com/w3c/webdriver/pull/1210
Our implementation was wrong in any case since we are limiting to INT_MAX.
Attachments
Patch
(6.24 KB, patch)
2018-01-26 01:44 PST
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-01-26 01:44:34 PST
Created
attachment 332360
[details]
Patch
Carlos Garcia Campos
Comment 2
2018-01-26 01:51:06 PST
Committed
r227671
: <
https://trac.webkit.org/changeset/227671
>
Radar WebKit Bug Importer
Comment 3
2018-01-26 01:52:29 PST
<
rdar://problem/36903286
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug